--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,14 @@ numpy = "^1.22.4"
 mdtraj = "^1.9.7"
 deepchem = "^2.6.1"
 tqdm = "^4.64.0"
-gym = "^0.24.0"
+gym = "^0.21.0"
 torch = "^1.11.0"
 torch-geometric = "^2.0.4"
 torch-sparse = "^0.6.13"
 torch-scatter = "^2.0.9"
+stable-baselines3 = "^1.5.0"
+tensorboard = "^2.9.0"
+protobuf = "3.20.0"
 
 [tool.poetry.dev-dependencies]
 
